--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@firebase/auth": "^1.7.5",
     "firebase": "^10.12.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
