--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.16.0",
     "react-wrap-balancer": "^1.1.0",
     "tailwind-merge": "^1.14.0",
