--- a/package.json
+++ b/package.json
@@ -50,8 +50,9 @@
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
+    "sass": "^1.77.6",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "vite": "5.2.6"
   }
 }
