--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "firebase": "^10.12.3",
+    "json-server": "1.0.0-beta.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.400.0",
     "react": "^18.2.0",
