--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "firebase": "^10.12.3",
+    "i18next": "^23.11.5",
     "json-server": "1.0.0-beta.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.400.0",
@@ -35,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^14.1.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.16.0",
     "react-wrap-balancer": "^1.1.0",
